deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workout-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workout-api
  template:
    metadata:
      labels:
        app: workout-api
    spec:
      containers:
      - name: workout-api
        image: ghcr.io/eswan18/workout-api:latest
        ports:
        - containerPort: 8000
