fe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workout-fe-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workout-fe
  template:
    metadata:
      labels:
        app: workout-fe
    spec:
      containers:
      - name: workout-fe
        image: ghcr.io/eswan18/workout-fe:latest
        ports:
        - containerPort: 3000
```
