fe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workout-fe-service
spec:
  type: LoadBalancer
  selector:
    app: workout-fe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
```
