service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workout-app-service
spec:
  type: NodePort
  selector:
    app: workout-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
