ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workout-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: workout-app-service
            port:
              number: 80
